tests/functional/lang/eval-fail-foldlPrime-1.err.exp
error:
       … while calling the 'foldl'' builtin
         at /pwd/lang/eval-fail-foldlPrime-1.nix:1:1:
            1| builtins.foldl' 1 "foo" true
             | ^
            2|

       … while evaluating the first argument passed to builtins.foldlStrict

       error: expected a function but found an integer: 1
